@@ -1,3 +1,9 @@
+2015-12-22 Erwin Waterlander <waterlan@xs4all.nl>
+	* Makefile: Split DEBUG=1 into DEBUG=1 and DEBUGMSG=1.
+	  DEBUG=1 will add option -g to CFLAGS for debugging with gdb.
+	  DEBUGMSG=1 makes dos2unix print extra messages about accessing the
+	  file system.
+
 2015-12-20 Erwin Waterlander <waterlan@xs4all.nl>
 	* Moved Subversion repository to Git repository.
 	  git clone git://git.code.sf.net/p/dos2unix/gitcode dos2unix-gitcode
